data/issues_nolabel/nolabel_test_3631.txt
Unable to build from source for TensorFlow r0.10 C++ compilation of rule '//tensorflow/core:lib_internal' failed: gcc failed: error executing command

I have followed this tutorial (https://github.com/samjabrahams/tensorflow-on-raspberry-pi) trying to install the latest tensorflow with quantization enabled, on raspberry pi 3. So I followed every step in it except for the tensorflow version, instead of Tensorflow 0.9 I used the latest 0.10.
But I ran into the following error
ERROR: /home/pi/tf2/bazel/tensorflow/tensorflow/core/BUILD:826:1: C++ compilation of rule '//tensorflow/core:lib_internal' failed: gcc failed: error executing command 
  (cd /home/pi/.cache/bazel/_bazel_pi/b1a0eb2b93fc558ac1cbf83f2cf3a5f1/tensorflow && \
  exec env - \
    PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/games:/usr/games:/opt/hadoop/bin:/opt/hadoop/sbin:/home/pi/opt/Cypress/arm-2013.11/bin:/home/pi/opt/Cypress/eclipse:/home/pi/opt \
  /usr/bin/gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 -DNDEBUG -ffunction-sections -fdata-sections '-mfpu=neon' '-std=c++0x' -DHAVE_CONFIG_H -iquote . -iquote bazel-out/local_linux-opt/genfiles -iquote external/protobuf -iquote bazel-out/local_linux-opt/genfiles/external/protobuf -iquote external/bazel_tools -iquote bazel-out/local_linux-opt/genfiles/external/bazel_tools -iquote external/farmhash_archive -iquote bazel-out/local_linux-opt/genfiles/external/farmhash_archive -iquote external/gif_archive -iquote bazel-out/local_linux-opt/genfiles/external/gif_archive -iquote external/highwayhash -iquote bazel-out/local_linux-opt/genfiles/external/highwayhash -iquote external/jpeg_archive -iquote bazel-out/local_linux-opt/genfiles/external/jpeg_archive -iquote external/png_archive -iquote bazel-out/local_linux-opt/genfiles/external/png_archive -iquote external/re2 -iquote bazel-out/local_linux-opt/genfiles/external/re2 -iquote external/eigen_archive -iquote bazel-out/local_linux-opt/genfiles/external/eigen_archive -iquote external/zlib_archive -iquote bazel-out/local_linux-opt/genfiles/external/zlib_archive -isystem external/protobuf/src -isystem bazel-out/local_linux-opt/genfiles/external/protobuf/src -isystem external/bazel_tools/tools/cpp/gcc3 -isystem external/farmhash_archive/farmhash-34c13ddfab0e35422f4c3979f360635a8c050260 -isystem bazel-out/local_linux-opt/genfiles/external/farmhash_archive/farmhash-34c13ddfab0e35422f4c3979f360635a8c050260 -isystem external/gif_archive/giflib-5.1.4/lib -isystem bazel-out/local_linux-opt/genfiles/external/gif_archive/giflib-5.1.4/lib -isystem external/highwayhash -isystem bazel-out/local_linux-opt/genfiles/external/highwayhash -isystem external/jpeg_archive/jpeg-9a -isystem bazel-out/local_linux-opt/genfiles/external/jpeg_archive/jpeg-9a -isystem external/png_archive/libpng-1.2.53 -isystem bazel-out/local_linux-opt/genfiles/external/png_archive/libpng-1.2.53 -isystem external/re2 -isystem bazel-out/local_linux-opt/genfiles/external/re2 -isystem external/eigen_archive -isystem bazel-out/local_linux-opt/genfiles/external/eigen_archive -isystem external/zlib_archive/zlib-1.2.8 -isystem bazel-out/local_linux-opt/genfiles/external/zlib_archive/zlib-1.2.8 -fno-exceptions -DEIGEN_AVOID_STL_ARRAY -pthread -no-canonical-prefixes -fno-canonical-system-headers -Wno-builtin-macro-redefined '-D__DATE__="redacted"' '-D__TIMESTAMP__="redacted"' '-D__TIME__="redacted"' '-frandom-seed=bazel-out/local_linux-opt/bin/tensorflow/core/_objs/lib_internal/tensorflow/core/lib/png/png_io.pic.o' -MD -MF bazel-out/local_linux-opt/bin/tensorflow/core/_objs/lib_internal/tensorflow/core/lib/png/png_io.pic.d -fPIC -c tensorflow/core/lib/png/png_io.cc -o bazel-out/local_linux-opt/bin/tensorflow/core/_objs/lib_internal/tensorflow/core/lib/png/png_io.pic.o): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
In file included from ./tensorflow/core/lib/png/png_io.h:39:0,
                 from tensorflow/core/lib/png/png_io.cc:27:
./tensorflow/core/platform/png.h:26:2: error: #error Define the appropriate PLATFORM_<foo> macro for this platform
 #error Define the appropriate PLATFORM_<foo> macro for this platform
  ^
In file included from tensorflow/core/lib/png/png_io.cc:27:0:
./tensorflow/core/lib/png/png_io.h:48:3: error: 'png_structp' does not name a type
   png_structp png_ptr;
   ^
./tensorflow/core/lib/png/png_io.h:49:3: error: 'png_infop' does not name a type
   png_infop info_ptr;
   ^
./tensorflow/core/lib/png/png_io.h:50:3: error: 'png_uint_32' does not name a type
   png_uint_32 width, height;
   ^
./tensorflow/core/lib/png/png_io.h: In constructor 'tensorflow::png::DecodeContext::DecodeContext()':
./tensorflow/core/lib/png/png_io.h:57:21: error: class 'tensorflow::png::DecodeContext' does not have any field named 'png_ptr'
   DecodeContext() : png_ptr(NULL), info_ptr(NULL) {}
                     ^
./tensorflow/core/lib/png/png_io.h:57:36: error: class 'tensorflow::png::DecodeContext' does not have any field named 'info_ptr'
   DecodeContext() : png_ptr(NULL), info_ptr(NULL) {}
                                    ^
./tensorflow/core/lib/png/png_io.h: At global scope:
./tensorflow/core/lib/png/png_io.h:78:25: error: 'png_bytep' was not declared in this scope
 bool CommonFinishDecode(png_bytep data, int row_bytes, DecodeContext* context);
                         ^
./tensorflow/core/lib/png/png_io.h:78:41: error: expected primary-expression before 'int'
 bool CommonFinishDecode(png_bytep data, int row_bytes, DecodeContext* context);
                                         ^
./tensorflow/core/lib/png/png_io.h:78:69: error: expected primary-expression before '*' token
 bool CommonFinishDecode(png_bytep data, int row_bytes, DecodeContext* context);
                                                                     ^
./tensorflow/core/lib/png/png_io.h:78:71: error: 'context' was not declared in this scope
 bool CommonFinishDecode(png_bytep data, int row_bytes, DecodeContext* context);
                                                                       ^
./tensorflow/core/lib/png/png_io.h:78:78: error: expression list treated as compound expression in initializer [-fpermissive]
 bool CommonFinishDecode(png_bytep data, int row_bytes, DecodeContext* context);
                                                                              ^
tensorflow/core/lib/png/png_io.cc:77:19: error: variable or field 'ErrorHandler' declared void
 void ErrorHandler(png_structp png_ptr, png_const_charp msg) {
                   ^
tensorflow/core/lib/png/png_io.cc:77:19: error: 'png_structp' was not declared in this scope
tensorflow/core/lib/png/png_io.cc:77:40: error: 'png_const_charp' was not declared in this scope
 void ErrorHandler(png_structp png_ptr, png_const_charp msg) {
                                        ^
tensorflow/core/lib/png/png_io.cc:85:21: error: variable or field 'WarningHandler' declared void
 void WarningHandler(png_structp png_ptr, png_const_charp msg) {
                     ^
tensorflow/core/lib/png/png_io.cc:85:21: error: 'png_structp' was not declared in this scope
tensorflow/core/lib/png/png_io.cc:85:42: error: 'png_const_charp' was not declared in this scope
 void WarningHandler(png_structp png_ptr, png_const_charp msg) {
                                          ^
tensorflow/core/lib/png/png_io.cc:89:19: error: variable or field 'StringReader' declared void
 void StringReader(png_structp png_ptr, png_bytep data, png_size_t length) {
                   ^
tensorflow/core/lib/png/png_io.cc:89:19: error: 'png_structp' was not declared in this scope
tensorflow/core/lib/png/png_io.cc:89:40: error: 'png_bytep' was not declared in this scope
 void StringReader(png_structp png_ptr, png_bytep data, png_size_t length) {
                                        ^
tensorflow/core/lib/png/png_io.cc:89:56: error: 'png_size_t' was not declared in this scope
 void StringReader(png_structp png_ptr, png_bytep data, png_size_t length) {
                                                        ^
tensorflow/core/lib/png/png_io.cc:398:1: error: expected '}' at end of input
 }  // namespace tensorflow
 ^
tensorflow/core/lib/png/png_io.cc:398:1: error: expected '}' at end of input
tensorflow/core/lib/png/png_io.cc:398:1: error: expected '}' at end of input
tensorflow/core/lib/png/png_io.cc:48:13: warning: 'void tensorflow::png::{anonymous}::Convert8to16(const uint8*, int, int, int, int, tensorflow::uint16*, int)' defined but not used [-Wunused-function]
 static void Convert8to16(const uint8* p8, int num_comps, int p8_row_bytes,
             ^
Target //tensorflow/tools/pip_package:build_pip_package failed to build

my gcc version is 4.9.2
I appreciate any help and suggestion!